# music-exercises

./: .gitignore  README.md  core.py  pyproject.toml  requirements.txt
music_exercises/: core.py
music_exercises/musicality/: genetic.py  genetic_helper.py
musicality/: constants.py  genetic_helper.py
musicality/classes/: chord.py  melody.py
musicality/musicality/: helpers.py
musicality/musicality/classes/: melody.py  note.py  scale.py
